# PowerMeter

./: .gitignore  ChangeLog  Makefile.am  README  TODO  ale3_meter.cpp  ale3_meter.h  bubental.csv  configuration.cpp  configuration.h  configure.ac  configureit  database.cpp  database.h  debug.c  debug.cpp  debug.h  format.cpp  format.h  message.cpp  message.h  meteo.xml  meter.cpp  meter.h  meterfactory.cpp  meterfactory.h  modbus_meter.cpp  modbus_meter.h  pm.sql  powermeter.config  powermeterd.cpp  salidomo.config  simulator.cpp  simulator.h  solivia-views.sql  solivia_meter.cpp  solivia_meter.h
docs/: solivia.pkt
etc/: salidomo-avg.service  salidomo.config  salidomo.csv  salidomo.service  salidomo.xml  solivia-avg.service  solivia.service  solivia.xml
